--- a/index.html
+++ b/index.html
@@ -7,6 +7,30 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div id="year" class="year"></div>
+    <h1>New Year Countdown</h1>
+    <div id="countdown" class="countdown">
+      <div class="time">
+        <h2 id="days">00</h2>
+        <small>days</small>
+      </div>
+      <div class="time">
+        <h2 id="hours">00</h2>
+        <small>days</small>
+      </div>
+      <div class="time">
+        <h2 id="minutes">00</h2>
+        <small>days</small>
+      </div>
+      <div class="time">
+        <h2 id="seconds">00</h2>
+        <small>days</small>
+      </div>
+    </div>
+
+    <!-- <img src="./img/spinner.gif" alt="loading..." id="loading" class="loading"> -->
+
+    <!-- ///////////////////////. -->
     <script src="script.js"></script>
   </body>
 </html>
