Add App functionality

--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
       </div>
     </div>
 
-    <!-- <img src="./img/spinner.gif" alt="loading..." id="loading" class="loading"> -->
+    <img
+      src="./img/spinner.gif"
+      alt="loading..."
+      id="loading"
+      class="loading"
+    />
 
     <!-- ///////////////////////. -->
     <script src="script.js"></script>
