Fix some errors

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
       </div>
       <div class="time">
         <h2 id="hours">00</h2>
-        <small>days</small>
+        <small>hours</small>
       </div>
       <div class="time">
         <h2 id="minutes">00</h2>
-        <small>days</small>
+        <small>minutes</small>
       </div>
       <div class="time">
         <h2 id="seconds">00</h2>
-        <small>days</small>
+        <small>seconds</small>
       </div>
     </div>
 
